--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rio Paraguaçu</title>
+    <title>Mapeamento da Bacia do rio Paraguaçu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Mapeamento da bacia rio paraguaçu</h1>
+        <h1>Mapeamento da Bacia do rio Paraguaçu</h1>
 
 
-        <input type="text" id="searchInput" placeholder="Pesquisar por CEP..." onkeyup="filtrarTabela()">
+        <input type="text" id="searchInput" placeholder="Pesquisar por Município..." onkeyup="filtrarTabela()">
 
         <table>
             <thead>
                 <tr>
                     <th>Município</th>
                     <th>Ano</th>
-                    <th>Código (CEP)</th>
-                    <th>Área (km²)</th>
+                    <th>Área (ha)</th>
                     <th>Nome</th>
                     <th>Bacia</th>
                 </tr>
