--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
     <div class="container">
         <h1>Mapeamento da Bacia do rio Paraguaçu</h1>
 
+        <select id="dropdownMenu" onchange="mudarPlaceholder()">
+            <option value="municipio" selected>Município</option>
+            <option value="codigo">Código do IBGE</option>
+            <option value="nome">Nome</option>
+            <option value="bacia">Bacia</option>
+        </select>
 
         <input type="text" id="searchInput" placeholder="Pesquisar por Município..." onkeyup="filtrarTabela()">
+
+        <button onclick="filtrarTabela()">Todos os Anos</button>
+        <button onclick="filtrarTabela(filtroAno = '2000')">2000</button>
+        <button onclick="filtrarTabela(filtroAno = '2010')">2010</button>
+        <button onclick="filtrarTabela(filtroAno = '2022')">2022</button>
 
         <table>
             <thead>
                 <tr>
                     <th>Município</th>
+                    <th>Código do IBGE</th>
                     <th>Ano</th>
                     <th>Área (ha)</th>
                     <th>Nome</th>
